@@ -12,6 +12,11 @@ What's New in Python 2.7 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #4445: Replace "sizeof(PyStringObject)" with
+  "offsetof(PyStringObject, ob_sval) + 1" when allocating memory for
+  str instances.  On a typical machine this saves 3 bytes of memory
+  (on average) per string allocation.
+
 - Issue #3996: On Windows, the PyOS_CheckStack function would cause the
   interpreter to abort ("Fatal Python error: Could not reset the stack!")
   instead of throwing a MemoryError.
